--- a/styles/style.css
+++ b/styles/style.css
@@ -1629,6 +1629,7 @@ footer{
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
+	padding-left: 3%;
     }
     .montserrat{
         flex-direction: column;
